# vmic

./: .release-please-manifest.json  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
.github/: release-please-config.json
.github/workflows/: release-please.yml  release.yml
modules/mod-containers/: Cargo.toml
modules/mod-containers/src/: lib.rs
modules/mod-cron/: Cargo.toml
modules/mod-cron/src/: lib.rs
modules/mod-docker/: Cargo.toml
modules/mod-docker/src/: lib.rs
modules/mod-journal/: Cargo.toml
modules/mod-journal/src/: lib.rs
modules/mod-network/: Cargo.toml
modules/mod-network/src/: lib.rs
modules/mod-os/: Cargo.toml
modules/mod-os/src/: lib.rs
modules/mod-proc/: Cargo.toml
modules/mod-proc/src/: lib.rs
modules/mod-sar/: Cargo.toml
modules/mod-sar/src/: lib.rs
modules/mod-security/: Cargo.toml
modules/mod-security/src/: lib.rs
modules/mod-services/: Cargo.toml
modules/mod-services/src/: lib.rs
modules/mod-storage/: Cargo.toml
modules/mod-storage/src/: lib.rs
modules/mod-users/: Cargo.toml
modules/mod-users/src/: lib.rs
schemas/: vmic-report.schema.json
templates/: report.html  report.md
vmic-cli/: CHANGELOG.md  Cargo.toml
vmic-cli/src/: main.rs
vmic-core/: Cargo.toml
vmic-core/src/: lib.rs  schema.rs
vmic-sdk/: Cargo.toml
vmic-sdk/src/: lib.rs
