[workspace]
resolver = "3"
members = [
  "vmic-cli",
  "vmic-core",
  "vmic-sdk",
  "modules/mod-os",
  "modules/mod-proc",
  "modules/mod-journal",
  "modules/mod-docker",
  "modules/mod-storage",
  "modules/mod-network",
]
default-members = ["vmic-cli"]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://example.com/valentin/vmic"

[workspace.dependencies]
anyhow = "1.0.100"
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
clap = { version = "4.5.48", features = ["derive"] }
askama = { version = "0.14.0", features = ["serde_json"] }
inventory = "0.3.21"
procfs = "0.18.0"
etc-os-release = "0.1.1"
rustix = { version = "1.0.8", features = ["fs", "system"] }
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
panic = "abort"
debug = 0
strip = "symbols"
