[workspace]
resolver = "3"
members = [
  "vmic-cli",
  "vmic-core",
  "vmic-sdk",
  "modules/mod-os",
  "modules/mod-proc",
  "modules/mod-journal",
  "modules/mod-docker",
  "modules/mod-users",
  "modules/mod-cron",
  "modules/mod-services",
  "modules/mod-sar",
  "modules/mod-containers",
  "modules/mod-storage",
  "modules/mod-network",
  "modules/mod-security",
]
default-members = ["vmic-cli"]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/4erdenko/vmic"

[workspace.dependencies]
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
clap = { version = "4.5.48", features = ["derive"] }
askama = { version = "0.14.0", features = ["serde_json"] }
inventory = "0.3.21"
procfs = "0.18.0"
etc-os-release = "0.1.1"
rustix = { version = "1.0.8", features = ["fs", "system"] }
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
once_cell = "1.20.2"
walkdir = "2.5.0"

[workspace.metadata.dist]
cargo-dist-version = "0.30.0"
targets = ["x86_64-unknown-linux-musl"]
unix-archive = ".tar.gz"
checksum = "sha256"
pr-run-mode = "plan"

[workspace.metadata.dist.dependencies.apt]
musl-tools = { targets = ["x86_64-unknown-linux-musl"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
panic = "abort"
debug = 0
strip = "symbols"
