[package]
name = "vmic-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
askama.workspace = true
chrono.workspace = true
once_cell.workspace = true
vmic-sdk = { path = "../vmic-sdk" }

[lints]
workspace = true

[dev-dependencies]
mod-os = { path = "../modules/mod-os" }
mod-proc = { path = "../modules/mod-proc" }
mod-journal = { path = "../modules/mod-journal" }
mod-docker = { path = "../modules/mod-docker" }
mod-users = { path = "../modules/mod-users" }
mod-cron = { path = "../modules/mod-cron" }
mod-services = { path = "../modules/mod-services" }
mod-sar = { path = "../modules/mod-sar" }
mod-containers = { path = "../modules/mod-containers" }
vmic-sdk = { path = "../vmic-sdk" }
jsonschema = "0.19.1"
