[package]
name = "mod-cron"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
vmic-sdk = { path = "../../vmic-sdk" }

[lints]
workspace = true
