[package]
name = "mod-docker"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
serde.workspace = true
vmic-sdk = { path = "../../vmic-sdk" }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "time"], optional = true }
bollard = { version = "0.19.2", optional = true }
futures-util = { version = "0.3.31", default-features = false, features = ["std"], optional = true }

[features]
default = []
client = ["tokio", "bollard", "futures-util"]

[lints]
workspace = true
