[package]
name = "mod-os"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
vmic-sdk = { path = "../../vmic-sdk" }
etc-os-release.workspace = true
rustix.workspace = true

[lints]
workspace = true
