[package]
name = "mod-storage"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
serde.workspace = true
vmic-sdk = { path = "../../vmic-sdk" }
rustix.workspace = true

[lints]
workspace = true
